--- a/index.css
+++ b/index.css
@@ -1,7 +1,7 @@
 body {
     text-align: center;
     margin: 0px;
-    font-family: "Dorsis";
+    font-family: "Dorsis", sans-serif;
 }
 
 .about {
