--- a/index.css
+++ b/index.css
@@ -5,11 +5,11 @@ body {
 }
 
 .about {
-    background-color: yellow;
+    background-color: LightGrey;
     padding: 0px;
 }
 
 .projects {
-    background-color: yellow;
+    background-color: LightGrey;
     padding: 10px;
 }
